8239915: Zero VM crashes when handling dynamic constant

Reviewed-by: dholmes